# nix-flake-templates

./: README.md  flake.nix
templates/haskell-simple-app/: Main.hs  flake.nix  haskell-simple-app.cabal
templates/haskell-tinker-shell/: Hebele.hs  README.md  flake.nix
templates/python-package/: .gitignore  README.md  flake.nix  noxfile.py  pyproject.toml
templates/python-package/tests/: __init__.py  test_cli.py  test_utils.py
templates/python-package/zamazingo/: __init__.py  cli.py  utils.py
templates/python-package/zamazingo/resources/: __init__.py  help.txt
templates/python-script/: flake.nix  script.py
templates/trivial/: flake.nix
