cabal-version: 2.4
name:          haskell-simple-app
version:       0.0.0.1
license:       MIT 
author:        Your Name
maintainer:    you@example.com
synopsis:      Minimal single-file Haskell executable
category:      Utility
build-type:    Simple

executable haskell-simple-app
  main-is:          Main.hs
  hs-source-dirs:   .
  ghc-options:      -Wall
  build-depends:
    , aeson
    , base        >=4.14 && <5
    , bytestring

  default-language: Haskell2010
